[package]
name = "repo-manifest"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
rayon = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
xz2 = "0.1"
sha2 = "0.9"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
toml = "0.5"
clap = "2.33"
walkdir = "2"
